--- a/contact-us-tc.html
+++ b/contact-us-tc.html
@@ -18,13 +18,13 @@
     <nav class="nav">
       <ol>
         <li>
-          <a href="portfolio-en.html" class="b1">PORTFOLIO</a>
+          <a href="portfolio-tc.html" class="b1">PORTFOLIO</a>
         </li>
         <li>
-          <a href="about-en.html" class="b2">ABOUT</a>
+          <a href="about-tc.html" class="b2">ABOUT</a>
         </li>
         <li>
-          <a href="contact-us-en.html" class="b3">CONTACT US</a>
+          <a href="contact-us-tc.html" class="b3">CONTACT US</a>
         </li>
         <div class="animation start-home"></div>
       </ol>
@@ -39,7 +39,6 @@
     </nav>
   </header>
   <main class="main">
-    <a href="#"><img src="image/hello-25.png" class="hello" alt=""></a>
   </main>
 </body>
 </html>
