--- a/frontpage-tc.html
+++ b/frontpage-tc.html
@@ -4,9 +4,19 @@
   <meta charset="utf-8">
   <title>One Studio</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/frontpage-tc.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/nbr8nwc.css">
   <script src="main.js" defer></script>
+  <script>
+  (function(d) {
+    var config = {
+      kitId: 'zkr5pof',
+      scriptTimeout: 3000,
+      async: true
+    },
+    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  })(document);
+</script>
 </head>
 <body>
   <header>
@@ -18,22 +28,22 @@
     <nav class="nav">
       <ol>
         <li>
-          <a href="portfolio-en.html" class="b1">PORTFOLIO</a>
+          <a href="portfolio-tc.html" class="b1">作品畫廊</a>
         </li>
         <li>
-          <a href="about-en.html" class="b2">ABOUT</a>
+          <a href="about-tc.html" class="b2">關於我們</a>
         </li>
         <li>
-          <a href="contact-us-en.html" class="b3">CONTACT US</a>
+          <a href="contact-us-tc.html" class="b3">聯繫我們</a>
         </li>
         <div class="animation start-home"></div>
       </ol>
       <div class="right-menu">
         <a href="#" class="link-lang"><img src="image/language.png" class="language" alt=""></a>
         <div class="dropdown-menu">
-          <a href="#">English</a>
+          <a href="index.html">English</a>
           <a href="frontpage-cc.html">简体中文</a>
-          <a href="frontpage-tc.html">繁體中文</a>
+          <a href="#">繁體中文</a>
         </div>
       </div>
     </nav>
